updated with fully working API

--- a/templates/admin/api_setup.html.twig
+++ b/templates/admin/api_setup.html.twig
@@ -321,7 +321,7 @@
                     requestBody.value = JSON.stringify({
                         name: "Test Contact",
                         email: "test@example.com",
-                        subject: "API Test",
+                        telephone: "+1234567890",
                         message: "This is a test message from the API testing interface."
                     }, null, 2);
                     break;
